# gem5_inference_models

./: README.md
MobileNetV2/: CMakeLists.txt  Network.cpp  Network.h  averagepoolLayer.cpp  batchnormalLayer.cpp  convLayer.cpp  convLayer.h  layer_bottleneck.cpp  layer_bottleneck.h  main.cpp  reluLayer.cpp  sigmoidLayer.cpp
ResNet-18/: Network.cpp  Network.h  averagepoolLayer.h  batchnormalLayer.cpp  batchnormalLayer.h  convLayer.cpp  convLayer.h  fcLayer.cpp  fcLayer.h  layers_ds.cpp  layers_ds.h  main.cpp  readdata.h  reluLayer.cpp  reluLayer.h
